Correctly preserve whitespace

--- a/static/index.css
+++ b/static/index.css
@@ -161,6 +161,10 @@ body {
     color: var(--terminal-comment);
 }
 
+.terminal-output .preserve-whitespace {
+    white-space: pre-wrap;
+}
+
 .terminal-body .directory {
     color: var(--terminal-directory);
 }
